kustomize-guestbook/ingress-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guestbook-traefik-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`guestbook.serval`)
      priority: 10
      services:
        - name: guestbook-ui
          port: 80
    - kind: Rule
      match: Host(`guestbook.serval`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: guestbook-ui
          port: 80
          scheme: h2c
  tls:
    certResolver: default
